c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_multiply.c
int main(void) {
    int to_multiply = 4;
    to_multiply *= 3;
    return to_multiply;
}