c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/mixed_precedence_assignment.c
int main(void) {
    int a = 1;
    int b = 2;
    a = 3 * b = a;
}